--- a/src/main/resources/templates/schoolclass.html
+++ b/src/main/resources/templates/schoolclass.html
@@ -38,11 +38,15 @@
             <th scope="col">Class Name</th>
             <th scope="col">Number of Students</th>
           </tr>
-        </thead>
+        </thead> 
+        
         <tbody>
-          <tr th:each="schoolClass: ${schoolClasses}" >
-            <td th:text="${schoolClass.section}"></td>
-            <td th:text="${schoolClass.getStudentNumber()}"></td>
+          <tr th:each="schoolClass: ${schoolClasses}">
+            <td> 
+                <a th:text= "${schoolClass.getSection()}" 
+                    th:href="@{/students/{section}(section=${schoolClass.getSection()})}"> Nome Classe </a>
+            </td>
+            <td th:text= "${schoolClass.getStudentNumber()}">Numero Alunni</td>
           </tr>
         </tbody>
       </table>
