--- a/src/main/resources/templates/studentlist.html
+++ b/src/main/resources/templates/studentlist.html
@@ -46,7 +46,7 @@
             <td th:text="${student.name}"></td>
             <td th:text="${student.surname}"></td>
             <td th:text="${student.age}"></td>
-            <td th:text="${student.getSchoolClass().section}"></td>
+            <td><a th:text= "${student.getSchoolClass().getSection()}" th:href="@{/students/{section}(section=${student.getSchoolClass().getSection()})}"> Classe </a></td>
           </tr>
         </tbody>
       </table>
